# warden-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mocks/notifier/: Dockerfile  main.py
mocks/orchestrator/: Dockerfile  main.py
scripts/: demo_learning.py
src/warden/: main.py
src/warden/adapters/outbound/llm/: mock_llm_client.py  openai_client.py  prompt_builder.py
src/warden/adapters/outbound/notifier/: http_notifier.py
src/warden/adapters/outbound/orchestrator/: http_orchestrator.py
src/warden/adapters/outbound/persistence/: models.py  sqlite_approval_repo.py  (+3 more)
src/warden/domain/models/: action_result.py  approval.py  decision.py  event.py  workload_history.py
src/warden/domain/ports/: approval_repository.py  decision_repository.py  event_repository.py  history_repository.py  llm_client.py  notifier.py  orchestrator.py
src/warden/domain/services/: action_executor.py  approval_service.py  ingest_event.py  reasoning_engine.py
src/warden/infrastructure/: config.py  container.py  database.py  exceptions.py  logging.py
tests/: conftest.py
tests/e2e/: conftest.py  test_warden_e2e.py
tests/fixtures/: events.py
tests/integration/: test_full_flow.py  test_routes.py  test_routes_coverage.py
tests/unit/: test_approval_service_unit.py  test_feedback_loop.py  test_ingest_event_service.py  test_logging_config.py  test_mock_notifier.py  test_mock_orchestrator.py  test_openai_parser.py  test_outbound_adapters.py  test_payload_validation.py  test_prompt_builder.py  test_reasoning_engine.py  test_restrictions.py
(+5 files in other folders)
